add register ep (#7)
* add register ep

* add register ep

* add register ep

* add git ignore

* add git ignore

* fix handler user register

* fix test
