# internal/api/api.go
@@ -9,36 +9,44 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/viettrung2103/bookmark-management-lesson/docs"
-	"github.com/viettrung2103/bookmark-management-lesson/internal/repository"
+	"github.com/viettrung2103/bookmark-management-lesson/internal/app/handler"
+	userHld "github.com/viettrung2103/bookmark-management-lesson/internal/app/handler/user"
+	"github.com/viettrung2103/bookmark-management-lesson/internal/app/repository"
+	userRepository "github.com/viettrung2103/bookmark-management-lesson/internal/app/repository/user"
+	"github.com/viettrung2103/bookmark-management-lesson/internal/app/service"
+	userService "github.com/viettrung2103/bookmark-management-lesson/internal/app/service/user"
 	"github.com/viettrung2103/bookmark-management-lesson/pkg/utils"
+	"gorm.io/gorm"
 
 	_ "github.com/viettrung2103/bookmark-management-lesson/docs"
-	"github.com/viettrung2103/bookmark-management-lesson/internal/handler"
-	"github.com/viettrung2103/bookmark-management-lesson/internal/service"
 )
 
 // Engine represents the application engine
 type Engine interface {
 	Start() error
 	ServeHTTP(w http.ResponseWriter, req *http.Request)
+	initHandlers() *handlers
 }
 
 type engine struct {
 	app   *gin.Engine
 	cfg   *Config
 	redis *redis.Client
+	db    *gorm.DB
 }
 
 // NewEngine creates a new engine
-func NewEngine(cfg *Config, redis *redis.Client) Engine {
-	app := &engine{
-		app:   gin.Default(),
+func NewEngine(app *gin.Engine, cfg *Config, redis *redis.Client, db *gorm.DB) Engine {
+	eng := &engine{
+		//app:   gin.Default(),
+		app:   app,
 		cfg:   cfg,
 		redis: redis,
+		db:    db,
 	}
-	app.initRoutes()
+	eng.initRoutes()
 
-	return app
+	return eng
 }
 
 // Start starts the engine
@@ -51,29 +59,71 @@ func (e *engine) ServeHTTP(w http.ResponseWriter, req *http.Request) {
 	e.app.ServeHTTP(w, req)
 }
 
+type handlers struct {
+	healthCheckHandler handler.HealthCheck
+	linkHandler        handler.ShortenUrl
+	userHandler        userHld.Handler
+}
+
+func (e *engine) initHandlers() *handlers {
+	healthCheckRepo := repository.NewHealthCheck(e.redis)
+	shortenUrlRepo := repository.NewUrlStorage(e.redis)
+
+	keyGen := utils.NewKeyGenerator()
+
+	shortenUrlSvc := service.NewShortenUrl(shortenUrlRepo, keyGen)
+	healthCheckSvc := service.NewHealthCheck(healthCheckRepo)
+
+	userRepo := userRepository.NewRepository(e.db)
+	userSvc := userService.NewService(userRepo)
+	userHanlder := userHld.NewHandler(userSvc)
+
+	return &handlers{
+		healthCheckHandler: handler.NewHealthCheck(healthCheckSvc),
+		linkHandler:        handler.NewShortenUrlHandler(shortenUrlSvc),
+		userHandler:        userHanlder,
+	}
+
+}
+
 // initRoutes initializes the routes
 func (e *engine) initRoutes() {
 	// genpass svc, handle and route
-	genPassSvc := service.NewGenPass()
-	genPassHandler := handler.NewGenPass(genPassSvc)
+	//genPassSvc := service.NewGenPass()
+	//genPassHandler := handler.NewGenPass(genPassSvc)
+	//
+	//keyGen := utils.NewKeyGenerator()
+	//shortenUrlRepo := repository.NewUrlStorage(e.redis)
+	//shortenUrlSvc := service.NewShortenUrl(shortenUrlRepo, keyGen)
+	//shortenUrlHandler := handler.NewShortenUrlHandler(shortenUrlSvc)
+	//
+	//healthCheckRepo := repository.NewHealthCheck(e.redis)
+	//healthCheckSvc := service.NewHealthCheck(healthCheckRepo)
+	//
+	//healthCheckHandler := handler.NewHealthCheck(healthCheckSvc)
+	allHandlers := e.initHandlers()
 
-	keyGen := utils.NewKeyGenerator()
-	shortenUrlRepo := repository.NewUrlStorage(e.redis)
-	shortenUrlSvc := service.NewShortenUrl(shortenUrlRepo, keyGen)
-	shortenUrlHandler := handler.NewShortenUrlHandler(shortenUrlSvc)
+	//e.app.GET("/genpass", genPassHandler.GeneratePassword)
+	//e.app.GET("/health-check", healthCheckHandler.CheckHealth)
+	//
+	//e.app.POST("/v1/links/shorten", shortenUrlHandler.ShortenUrl)
+	//e.app.GET("/v1/links/redirect/:code", shortenUrlHandler.Redirect)
 
-	healthCheckRepo := repository.NewHealthCheck(e.redis)
-	healthCheckSvc := service.NewHealthCheck(healthCheckRepo)
+	//health-check
+	e.app.GET("/health-check", allHandlers.healthCheckHandler.CheckHealth)
+	//e.app.GET("/genpass", allHandlers.genPassHandler.GeneratePassword)
 
-	healthCheckHandler := handler.NewHealthCheck(healthCheckSvc)
-
-	e.app.GET("/genpass", genPassHandler.GeneratePassword)
-	e.app.GET("/health-check", healthCheckHandler.CheckHealth)
-
-	//int swagger routes
+	//Init swagger routes
 	docs.SwaggerInfo.Host = e.cfg.Hostname
 	e.app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	e.app.POST("/v1/links/shorten", shortenUrlHandler.ShortenUrl)
-	e.app.GET("/v1/links/redirect/:code", shortenUrlHandler.Redirect)
+	v1Routes := e.app.Group("/v1")
+	{ //link routes
+		v1Routes.POST("/links/shorten", allHandlers.linkHandler.ShortenUrl)
+		v1Routes.GET("/links/redirect/:code", allHandlers.linkHandler.Redirect)
+
+		//user routes
+		v1Routes.POST("/users/register", allHandlers.userHandler.Register)
+	}
+
 }
